fix(navbar): higher z-index of mobile navbar

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -24,10 +24,11 @@ a {
 
 /*Mobile navbar*/
 .mobile__navbar {
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   right: 0;
+  z-index: 1;
 }
 .mobile__links__container {
   display: flex;
@@ -42,7 +43,7 @@ a {
   list-style: none;
   transition: all 1s ease-in;
 }
-.active {
+/* .active {
   clip-path: circle(1000px at 90% -10%);
   -webkit-clip-path: circle(1000px at 90% -10%);
   transition: all 1s ease-in;
@@ -51,7 +52,7 @@ a {
   transition: all 1s ease-in;
   clip-path: circle(100px at 90% -10%);
   -webkit-clip-path: circle(100px at 90% -10%);
-}
+} */
 .mobile__links {
   color: var(--color-text);
   font-size: var(--font-size-1);
